Adding Guitar Center scraper files

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+GuitarCenter/product_pages_full
+GuitarCenter/browsing_pages
