--- a/environment.yaml
+++ b/environment.yaml
@@ -1,86 +1,11 @@
 name: MSDS459_Bodkin
 channels:
-  - anaconda
   - defaults
 dependencies:
-  - appdirs=1.4.4=pyhd3eb1b0_0
-  - beautifulsoup4=4.11.1=py39haa95532_0
-  - blas=1.0=mkl
-  - bokeh=3.0.3=py39haa95532_0
-  - bottleneck=1.3.5=py39h080aedc_0
-  - brotlipy=0.7.0=py39h2bbff1b_1003
-  - ca-certificates=2023.01.10=haa95532_0
-  - certifi=2022.12.7=py39haa95532_0
-  - cffi=1.15.1=py39h2bbff1b_3
-  - charset-normalizer=2.0.4=pyhd3eb1b0_0
-  - click=8.0.4=py39haa95532_0
-  - colorama=0.4.6=py39haa95532_0
-  - contourpy=1.0.5=py39h59b6b97_0
-  - cryptography=38.0.4=py39h21b164f_0
-  - flask=2.2.2=py39haa95532_0
-  - freetype=2.12.1=ha860e81_0
-  - giflib=5.2.1=h8cc25b3_3
-  - icc_rt=2022.1.0=h6049295_2
-  - idna=3.4=py39haa95532_0
-  - importlib-metadata=4.11.3=py39haa95532_0
-  - intel-openmp=2021.4.0=haa95532_3556
-  - itsdangerous=2.0.1=pyhd3eb1b0_0
-  - jinja2=3.1.2=py39haa95532_0
-  - joblib=1.1.1=py39haa95532_0
-  - jpeg=9e=h2bbff1b_1
-  - lerc=3.0=hd77b12b_0
-  - libdeflate=1.17=h2bbff1b_0
-  - libpng=1.6.39=h8cc25b3_0
-  - libtiff=4.5.0=h6c2663c_2
-  - libwebp=1.2.4=hbc33d0d_1
-  - libwebp-base=1.2.4=h2bbff1b_1
-  - lz4-c=1.9.4=h2bbff1b_0
-  - markupsafe=2.1.1=py39h2bbff1b_0
-  - mkl=2021.4.0=haa95532_640
-  - mkl-service=2.4.0=py39h2bbff1b_0
-  - mkl_fft=1.3.1=py39h277e83a_0
-  - mkl_random=1.2.2=py39hf11a4ad_0
-  - numexpr=2.8.4=py39h5b0cc5e_0
-  - numpy=1.23.5=py39h3b20f71_0
-  - numpy-base=1.23.5=py39h4da318b_0
-  - openssl=1.1.1t=h2bbff1b_0
-  - packaging=22.0=py39haa95532_0
-  - pandas=1.5.3=py39hf11a4ad_0
-  - pillow=9.4.0=py39hd77b12b_0
-  - pip=22.3.1=py39haa95532_0
-  - pooch=1.4.0=pyhd3eb1b0_0
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pyopenssl=22.0.0=pyhd3eb1b0_0
-  - pysocks=1.7.1=py39haa95532_0
-  - python=3.9.16=h6244533_0
-  - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - pytz=2022.7=py39haa95532_0
-  - pyyaml=6.0=py39h2bbff1b_1
-  - requests=2.28.1=py39haa95532_0
-  - scikit-learn=1.2.1=py39hd77b12b_0
-  - scipy=1.10.0=py39h321e85e_1
-  - selenium=3.141.0=py39h2bbff1b_1000
-  - setuptools=65.6.3=py39haa95532_0
-  - six=1.16.0=pyhd3eb1b0_1
-  - soupsieve=2.3.2.post1=py39haa95532_0
-  - sqlite=3.40.1=h2bbff1b_0
-  - threadpoolctl=2.2.0=pyh0d69192_0
-  - tk=8.6.12=h2bbff1b_0
-  - tornado=6.2=py39h2bbff1b_0
-  - tzdata=2022a=hda174b7_0
-  - urllib3=1.26.14=py39haa95532_0
-  - vc=14.2=h21ff451_1
-  - vs2015_runtime=14.27.29016=h5e58377_2
-  - werkzeug=2.2.2=py39haa95532_0
-  - wheel=0.37.1=pyhd3eb1b0_0
-  - win_inet_pton=1.1.0=py39haa95532_0
-  - wincertstore=0.2=py39haa95532_2
-  - xyzservices=2022.9.0=py39haa95532_1
-  - xz=5.2.10=h8cc25b3_1
-  - yaml=0.2.5=he774522_0
-  - zipp=3.11.0=py39haa95532_0
-  - zlib=1.2.13=h8cc25b3_0
-  - zstd=1.5.2=h19a0ad4_0
-  - pip:
-    - edgedb==1.3.0
+  - python=3.9
+  - beautifulsoup4
+  - flask
+  - selenium
+  - scikit-learn
+  - bokeh
 prefix: C:\Users\17204\miniconda3\envs\MSDS459_Bodkin
